--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Build the books
         run: |
           # Build all packages defined in the flake
-          for output in $(nix flake show --json | jq -r '.packages."x86_64-linux" | keys[]'); do 
-                nix build .#$output -o "$(echo $output | tr - .)"
+          for output in $(nix flake show --json | jq -r '.packages."x86_64-linux" | keys[]'); do
+            nix build .#$output -o "$(echo $output | tr - .)" || :
           done
 
       - name: Create Release
